--- a/package.json
+++ b/package.json
@@ -1,3 +1,13 @@
-"scripts": {
-  "start": "node server.js"
+{
+  "name": "middleware",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "body-parser": "^1.20.2",
+    "ws": "^8.12.0"
+  }
 }
